[gd_scene load_steps=7 format=3 uid="uid://dl7g555lf7a0q"]

[ext_resource type="Script" path="res://Old/Projectile_bounce_enemy.gd" id="1_t81ur"]
[ext_resource type="Texture2D" uid="uid://mqyg54ketta1" path="res://art2/barrel.png" id="2_mdatl"]
[ext_resource type="Script" path="res://Old/Damaging_pro_boss.gd" id="3_76fli"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q1sm6"]
radius = 27.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3sp2w"]
radius = 51.4286

[sub_resource type="CircleShape2D" id="CircleShape2D_ikco2"]
radius = 54.0

[node name="Projectile_bounce_enemy" type="CharacterBody2D"]
script = ExtResource("1_t81ur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q1sm6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.43051e-06, 1.43051e-06)
scale = Vector2(2.25, 2.25)
texture = ExtResource("2_mdatl")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Damaging_pro" type="Area2D" parent="."]
script = ExtResource("3_76fli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damaging_pro"]
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_3sp2w")

[node name="Check_recoil" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check_recoil"]
shape = SubResource("CircleShape2D_ikco2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Damaging_pro" to="Damaging_pro" method="_on_body_entered"]
[connection signal="body_entered" from="Check_recoil" to="." method="_on_check_recoil_body_entered"]
[connection signal="body_exited" from="Check_recoil" to="." method="_on_check_recoil_body_exited"]
